# models.open223.info

./: .buildinfo  .gitignore  CNAME  G36-4-1.jsonld  HPL.jsonld  HPL.ttl  IBAL.jsonld  Makefile  NIST-HPL-a5e1a36e08db735b76c01fd4ca5c5323.md  NIST-HPL.jsonld  NIST-IBAL.jsonld  NIST-IBAL.ttl  README.md  _config.yml  _toc.yml  bdg1-1.jsonld  bdg1-2.jsonld  build_examples.sh  config.json  design-patterns-b4440e04ceb08e8bd9ea010934c946be.md  design-patterns.json  design-patterns.jsonld  genindex.html  guideline36-2021-4-1.jsonld  guideline36-2021-4.1.jsonld  guideline36-2021-4.2.jsonld  guideline36-2021-4.3-parallel-constant.jsonld  guideline36-2021-4.3-parallel-variable.jsonld  guideline36-2021-4.4.jsonld  guideline36-2021-4.5.jsonld  guideline36-2021-4.6.jsonld  guideline36-2021-A-1.jsonld  guideline36-2021-A-1.ttl  guideline36-2021-A-2.jsonld  guideline36-2021-A-2.ttl  guideline36-2021-A-3-41af9caeda4fef377bb91d79bcc9fca5.md  guideline36-2021-A-3.jsonld  guideline36-2021-A-3.ttl  guideline36-2021-A-4.jsonld  guideline36-2021-A-7.jsonld  (+64 more)
_static/: G36-4-1.jsonld  lbnl-example.jsonld  nrel-example.jsonld
compiled/: HPL.ttl  IBAL.ttl  NIST-HPL.ttl  NIST-IBAL.ttl  bdg1-1.ttl  bdg1-2.ttl  design-patterns.ttl  guideline36-2021-4.2.ttl  guideline36-2021-4.3-parallel-variable.ttl  guideline36-2021-4.6.ttl  guideline36-2021-A-1.ttl  guideline36-2021-A-2.ttl  guideline36-2021-A-3.ttl  guideline36-2021-A-4.ttl  guideline36-2021-A-7.ttl  guideline36-2021-A-8.ttl  guideline36-2021-A-9.ttl  lbnl-bdg3-1.ttl  lbnl-bdg4-1.ttl  lbnl-example-2.ttl  lbnl-example-radiant.ttl  lbnl-example.ttl  nist-bdg1-1.ttl  nist-example.ttl  nrel-example.ttl  pnnl-bdg1-2.ttl  pnnl-bdg2-1.ttl  pnnl-bdg3-2.ttl  pnnl-example2.ttl  scb-rtu.ttl  scb-vrf.ttl
design-patterns/: index.html
(+223 files in other folders)
