[project]
name = "models-open223-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter-book>=1.0.2",
    "jupyterlab>=4.2.5",
    "nbformat>=5.10.4",
    "pyontoenv>=0.3.1a1",
    "rdflib>=7.0.0",
    "buildingmotif[topquadrant]",
    "sphinxcontrib-mermaid>=0.9.2",
    "toml>=0.10.2",
]

[tool.uv.sources]
buildingmotif = { git = "https://github.com/NREL/buildingmotif.git", rev = "develop" }

[tool.uv]
override-dependencies = ["brick-tq-shacl==0.4.0a10"]
